Fixed footer overlapping issue and added contact menu linking on click

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -225,7 +225,6 @@ ul{
   text-transform: capitalize;
   margin-bottom: 35px;
   font-weight: 500;
-  position: relative;
 }
 .footer-col h4::before{
   content: '';
